# industrial-robotics

./: CLAUDE.md  README.md  compile_commands.json
docs/: README.md  ROADMAP.md
docs/en/: ROADMAP.md  cpp_patterns.md  notes.md  qos_demo_walkthrough.md  tf2_urdf_structure.md
docs/tr/: ROADMAP.md  cpp_patterns.md  notes.md  qos_demo_walkthrough.md  tf2_urdf_structure.md
irp_examples/src/: lifecycle_demo_node.cpp
src/irp_description/: CMakeLists.txt  package.xml
src/irp_description/launch/: display.launch.py
src/irp_description/rviz/: ur5e.rviz
src/irp_description/urdf/: common.xacro  ur5e.urdf.xacro
src/irp_examples/: CMakeLists.txt  package.xml
src/irp_examples/config/: lifecycle_demo.yaml  qos_demo.yaml
src/irp_examples/launch/: lifecycle_demo.launch.py  qos_demo.launch.py
src/irp_examples/src/: command_safety_gate_node.cpp  lifecycle_demo_node.cpp  qos_demo_node.cpp  static_mount_broadcaster_node.cpp  tf2_listener_demo_node.cpp
src/irp_msgs/: CMakeLists.txt  package.xml
src/irp_msgs/action/: MoveToHome.action
src/irp_msgs/msg/: RobotMode.msg
src/irp_msgs/srv/: SetRobotMode.srv
